--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "lint-ts": "tsc --noEmit --skipLibCheck && eslint --ext .json,.js,.ts,.tsx .",
     "lint-css": "stylelint \"src/**/*.css\"",
     "link-check": "repo-link-check -c config/link-check/config.yml",
-    "link-check-diff": "repo-link-check -c config/link-check/config.yml -d",
+    "link-check-diff": "repo-link-check -c config/link-check/config.yml -d master",
     "link-check-dev-server": "repo-link-check -c config/link-check/config.yml -r http://localhost:3000",
     "link-check-exclude": "repo-link-check -c config/link-check/config.yml --unused-patterns-only"
   },
@@ -86,7 +86,7 @@
     "react-use": "^17.3.1",
     "rehype-react": "^6.2.1",
     "remark-preset-lint-recommended": "^5.0.0",
-    "repo-link-check": "^0.8.0",
+    "repo-link-check": "^0.11.0",
     "reset-css": "^5.0.1",
     "s3-client": "^4.4.2",
     "scroll": "^3.0.1",
