--- a/.github/workflows/link-check-deploy.yml
+++ b/.github/workflows/link-check-deploy.yml
@@ -25,7 +25,7 @@ jobs:
         id: check
         uses: iterative/link-check.action@v0.11
         with:
-          diff: true
+          diff: master
           configFile: config/link-check/config.yml
           rootURL: '${{ github.event.deployment.payload.web_url }}'
           output: checksAction
