--- a/.github/workflows/link-check-deploy.yml
+++ b/.github/workflows/link-check-deploy.yml
@@ -23,9 +23,9 @@ jobs:
           status: queued
       - name: Run Link Check
         id: check
-        uses: iterative/link-check.action@v0.9
+        uses: iterative/link-check.action@v0.11
         with:
-          diff: true
+          diff: master
           configFile: config/link-check/config.yml
           rootURL: '${{ github.event.deployment.payload.web_url }}'
           output: checksAction
