--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "gatsby-plugin-parent-resolvers": "^1.0.1",
     "github-markdown-css": "^5.0.0",
     "graphql": "^16.0.1",
+    "http-proxy-middleware": "^2.0.6",
     "iso-url": "^1.2.1",
     "isomorphic-fetch": "^3.0.0",
     "lodash": "^4.17.21",
