--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "node": ">=14.x <=16.x"
   },
   "dependencies": {
-    "@dvcorg/gatsby-theme-iterative": "^0.0.7",
+    "@dvcorg/gatsby-theme-iterative": "^0.0.9",
     "@hapi/wreck": "^17.2.0",
     "@octokit/graphql": "^4.8.0",
     "@reach/portal": "^0.16.2",
@@ -167,6 +167,7 @@
     "remark-parse": "^10.0.1",
     "stylelint": "^14.6.1",
     "stylelint-config-standard": "^25.0.0",
+    "tailwindcss": "^3.0.24",
     "typescript": "^4.6.3",
     "unist-util-remove-position": "^4.0.1"
   },
