--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     "gatsby-plugin-catch-links": "^4.3.0",
     "gatsby-plugin-feed": "^4.3.0",
     "gatsby-plugin-manifest": "^4.3.0",
+    "gatsby-plugin-netlify-cms": "^6.14.0",
     "gatsby-plugin-postcss": "^5.3.0",
     "gatsby-plugin-react-helmet": "^5.3.0",
     "gatsby-plugin-sentry": "^1.0.1",
@@ -155,6 +156,7 @@
     "iframe-resizer-react": "^1.1.0",
     "jest": "^27.4.0",
     "lint-staged": "^12.1.2",
+    "netlify-cms-app": "^2.15.72",
     "postcss-color-mod-function": "^3.0.3",
     "postcss-custom-media": "^8.0.0",
     "postcss-custom-properties": "^12.0.0",
