setup github oauth

--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "scroll": "^3.0.1",
     "serve-handler": "^6.1.2",
     "sharp": "^0.29.3",
+    "simple-oauth2": "^4.3.0",
     "slick-carousel": "^1.8.1",
     "title-case": "^3.0.2",
     "unist-util-visit": "2.0.2",
@@ -113,6 +114,7 @@
     "@types/react-popover": "^0.5.3",
     "@types/react-slick": "^0.23.7",
     "@types/rehype-react": "^4.0.0",
+    "@types/simple-oauth2": "^4.1.1",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "autoprefixer": "^10.4.0",
