Use link check from the CLI instead of an action

--- a/.github/workflows/link-check-deploy.yml
+++ b/.github/workflows/link-check-deploy.yml
@@ -12,37 +12,13 @@ jobs:
       github.event.deployment.ref != 'master' &&
       github.event.deployment_status.state == 'success'
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - id: build_check
-        uses: LouisBrunner/checks-action@v1.0.0
+      - uses: actions/setup-node@v3
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          name: Report
-          status: queued
+          node-version: 16
+          cache: 'yarn'
       - name: Run Link Check
         id: check
-        uses: iterative/link-check.action@v0.11
-        with:
-          diff: master
-          configFile: config/link-check/config.yml
-          rootURL: '${{ github.event.deployment.payload.web_url }}'
-          output: checksAction
-      - uses: LouisBrunner/checks-action@v1.0.0
-        if: ${{ success() }}
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          check_id: ${{ steps.build_check.outputs.check_id }}
-          status: completed
-          conclusion: ${{ steps.check.outputs.conclusion }}
-          output: ${{ steps.check.outputs.output }}
-      - uses: LouisBrunner/checks-action@v1.0.0
-        if: ${{ failure() }}
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          check_id: ${{ steps.build_check.outputs.check_id }}
-          status: completed
-          conclusion: failure
-          output: >-
-            {"summary": "The Link Check script had an error!"}
+        run: yarn link-check-diff -f
