--- a/.github/workflows/link-check-deploy.yml
+++ b/.github/workflows/link-check-deploy.yml
@@ -2,14 +2,12 @@ name: Check new links against deployment
 # This workflow "triggers" and skips on deployment because GitHub Actions /
 # Checks refuses to show the check on deployment_status
 on:
-  - deployment
   - deployment_status
 jobs:
   run:
-    name: Initialize
+    name: Link Check
     runs-on: ubuntu-latest
     if:
-      github.event.deployment.ref != 'master' &&
       github.event.deployment_status.state == 'success'
     steps:
       - uses: actions/checkout@v3
@@ -19,6 +17,6 @@ jobs:
         with:
           node-version: 16
           cache: 'yarn'
-      - name: Run Link Check
+      - name: Check
         id: check
         run: yarn link-check-diff -f
