Add install step

--- a/.github/workflows/link-check-deploy.yml
+++ b/.github/workflows/link-check-deploy.yml
@@ -16,6 +16,8 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-      - name: Check
+      - name: Install
+        run: 'yarn add repo-link-check'
+      - name: Check Links
         id: check
         run: 'yarn link-check-diff -f -r "${{ github.event.deployment.payload.web_url }}"'
