--- a/.github/workflows/link-check-deploy.yml
+++ b/.github/workflows/link-check-deploy.yml
@@ -16,6 +16,4 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-      - name: Check Links
-        id: check
-        run: 'npx repo-link-check -c config/link-check/config.yml -d master -f -r "${{ github.event.deployment.payload.web_url }}" >> $GITHUB_STEP_SUMMARY'
+      - run: 'npx repo-link-check -c config/link-check/config.yml -d master -f -r "${{ github.event.deployment.payload.web_url }}" >> $GITHUB_STEP_SUMMARY'
