--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "format-check": "prettier --check '**/*.{js,jsx,md,tsx,ts,json}'",
     "format-all": "prettier --write '**/*.{js,jsx,md,tsx,ts,json}'",
     "format": "prettier --write",
-    "lint-ts": "tsc --noEmit --skipLibCheck && eslint --ext .json,.js,.ts,.tsx .",
+    "lint-ts": "tsc --noEmit --skipLibCheck && ",
     "lint-css": "stylelint \"src/**/*.css\"",
     "link-check": "repo-link-check -c config/link-check/config.yml",
     "link-check-diff": "repo-link-check -c config/link-check/config.yml -d master",
     "link-check-dev-server": "repo-link-check -c config/link-check/config.yml -r http://localhost:3000",
-    "link-check-exclude": "repo-link-check -c config/link-check/config.yml --unused-patterns-only"
+    "link-check-exclude": "repo-link-check -c config/link-check/config.yml --unused-patterns-only",
+    "prepare": "husky install",
+    "test-lint": "eslint"
   },
   "repository": {
     "type": "git",
@@ -149,7 +151,7 @@
     "gatsby-transformer-remark": "^5.15.0",
     "gatsby-transformer-sharp": "^4.15.0",
     "hast-util-select": "^5.0.2",
-    "husky": "^8.0.1",
+    "husky": "^8.0.0",
     "iframe-resizer-react": "^1.1.0",
     "jest": "^28.1.0",
     "lint-staged": "^12.4.2",
@@ -169,11 +171,6 @@
     "tailwindcss": "^3.0.24",
     "typescript": "^4.7.2",
     "unist-util-remove-position": "^4.0.1"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn format-staged && yarn lint-staged"
-    }
   },
   "lint-staged": {
     "*.{js,ts,tsx,json}": [
