--- a/package.json
+++ b/package.json
@@ -16,14 +16,13 @@
     "format-check": "prettier --check '**/*.{js,jsx,md,tsx,ts,json}'",
     "format-all": "prettier --write '**/*.{js,jsx,md,tsx,ts,json}'",
     "format": "prettier --write",
-    "lint-ts": "tsc --noEmit --skipLibCheck && ",
+    "lint-ts": "tsc --noEmit --skipLibCheck && eslint --ext .json,.js,.ts,.tsx .",
     "lint-css": "stylelint \"src/**/*.css\"",
     "link-check": "repo-link-check -c config/link-check/config.yml",
     "link-check-diff": "repo-link-check -c config/link-check/config.yml -d master",
     "link-check-dev-server": "repo-link-check -c config/link-check/config.yml -r http://localhost:3000",
     "link-check-exclude": "repo-link-check -c config/link-check/config.yml --unused-patterns-only",
-    "prepare": "husky install",
-    "test-lint": "eslint"
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
