--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,6 @@
     "alwaysStrict": true,
     "noEmit": true
   },
-  "include": ["./src/**/*", "./*.js"]
+  "include": ["./src/**/*", "./*.js"],
+  "exclude": ["./node_modules/**/*"]
 }
