--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "link-check": "repo-link-check -c config/link-check/config.yml",
     "link-check-diff": "repo-link-check -c config/link-check/config.yml -d master",
     "link-check-dev-server": "repo-link-check -c config/link-check/config.yml -r http://localhost:3000",
-    "link-check-exclude": "repo-link-check -c config/link-check/config.yml --unused-patterns-only"
+    "link-check-exclude": "repo-link-check -c config/link-check/config.yml --unused-patterns-only",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -111,7 +112,6 @@
     "@types/react-instantsearch-dom": "^6.12.3",
     "@types/react-popover": "^0.5.3",
     "@types/react-slick": "^0.23.8",
-    "@types/rehype-react": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
     "autoprefixer": "^10.4.7",
@@ -149,7 +149,7 @@
     "gatsby-transformer-remark": "^5.15.0",
     "gatsby-transformer-sharp": "^4.15.0",
     "hast-util-select": "^5.0.2",
-    "husky": "^8.0.1",
+    "husky": "^8.0.0",
     "iframe-resizer-react": "^1.1.0",
     "jest": "^28.1.0",
     "lint-staged": "^12.4.2",
@@ -169,11 +169,6 @@
     "tailwindcss": "^3.0.24",
     "typescript": "^4.7.2",
     "unist-util-remove-position": "^4.0.1"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn format-staged && yarn lint-staged"
-    }
   },
   "lint-staged": {
     "*.{js,ts,tsx,json}": [
