--- a/.github/ISSUE_TEMPLATE/general.yaml
+++ b/.github/ISSUE_TEMPLATE/general.yaml
@@ -1,5 +1,5 @@
 name: DVC docs issue
-description: Issues about dvc.org/doc
+description: Issues about the dvc.org website (including DVC docs)
 title: ""
 labels: []
 body:
