--- a/.github/workflows/blogs-indexing.yaml
+++ b/.github/workflows/blogs-indexing.yaml
@@ -8,7 +8,7 @@ on:
         required: false
         type: boolean
   push:
-    branches: ['master']
+    branches: ['main']
     paths:
       - 'content/blog/**'
 jobs:
