Add custom admon style

--- a/.vale.ini
+++ b/.vale.ini
@@ -4,4 +4,4 @@ MinAlertLevel = suggestion
 Vocab = Base
 
 [*.md]
-BasedOnStyles = Vale, alex, proselint, Readability, write-good
+BasedOnStyles = Vale, alex, proselint, Readability, write-good, dvc
