--- a/.github/workflows/vale.yaml
+++ b/.github/workflows/vale.yaml
@@ -12,3 +12,4 @@ jobs:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
         with:
           files: "content/docs"
+          fail_on_error: false
