--- a/.github/workflows/link-check-deploy.yml
+++ b/.github/workflows/link-check-deploy.yml
@@ -20,9 +20,15 @@ jobs:
           cache: yarn
       - name: Run Link Check
         id: check
-        run: 'echo "::set-output report=Link Check Report\\n\\n$(npx repo-link-check -d -c config/link-check/config.yml) -r ${{ github.event.deployment.payload.web_url }}"'
+        run: >-
+          echo "::set-output
+          report=Link Check Report\\n\\n$(npx
+          repo-link-check
+          -d
+          -c config/link-check/config.yml
+          -r ${{ github.event.deployment.payload.web_url }})"
 
-      - name: Find Comment
+      - name: Find Existing Link Check Report Comment
         uses: peter-evans/find-comment@v2
         id: fc
         with:
@@ -32,6 +38,7 @@ jobs:
   
       - name: Create or update comment
         uses: peter-evans/create-or-update-comment@v2
+        if: always()
         with:
           comment-id: ${{ steps.fc.outputs.comment-id }}
           issue-number: ${{ github.event.pull_request.number }}
