--- a/.github/workflows/link-check-deploy.yml
+++ b/.github/workflows/link-check-deploy.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Run Link Check
         id: check
         run: |
-          body="# Link Check Report\n\n$(
+          body="\# Link Check Report\n\n$(
             npx repo-link-check \
             -d -c config/link-check/config.yml \
             -r ${{ github.event.deployment.payload.web_url }})"
@@ -43,14 +43,12 @@ jobs:
         with:
           issue-number: ${{ steps.pr-number.outputs.result }}
           comment-author: 'github-actions[bot]'
-          body-includes: "# Link Check Report"
+          body-includes: "Link Check Report"
 
       - name: Create or update comment
         uses: peter-evans/create-or-update-comment@v2
         with:
           comment-id: ${{ steps.fc.outputs.comment-id }}
           issue-number: ${{ steps.pr-number.outputs.result }}
-          body: |
-            Link Check Report
-            ${{ steps.check.outputs.report }}
+          body: ${{ steps.check.outputs.report }}
           edit-mode: replace
