--- a/.github/workflows/link-check-deploy.yml
+++ b/.github/workflows/link-check-deploy.yml
@@ -18,7 +18,9 @@ jobs:
       - name: Run Link Check
         id: check
         run: |
-          body="\# Link Check Report\n\n$(
+          body="# Link Check Report
+
+          $(
             npx repo-link-check \
             -d -c config/link-check/config.yml \
             -r ${{ github.event.deployment.payload.web_url }})"
