--- a/.github/workflows/link-check-deploy.yml
+++ b/.github/workflows/link-check-deploy.yml
@@ -45,7 +45,7 @@ jobs:
         with:
           issue-number: ${{ steps.pr-number.outputs.result }}
           comment-author: 'github-actions[bot]'
-          body-includes: "Link Check Report"
+          body-includes: "# Link Check Report"
 
       - name: Create or update comment
         uses: peter-evans/create-or-update-comment@v2
