--- a/.github/workflows/link-check-deploy.yml
+++ b/.github/workflows/link-check-deploy.yml
@@ -5,7 +5,6 @@ jobs:
   run:
     name: Run
     runs-on: ubuntu-latest
-    continue-on-error: true
     if:
       github.event.deployment.ref != 'main' &&
       github.event.deployment_status.state == 'success'
@@ -29,22 +28,25 @@ jobs:
           exit 0
 
       - name: Find Current Pull Request
+        id: findPr
         uses: jwalton/gh-find-current-pr@v1.3.0
 
       - name: Find Existing Link Check Report Comment
         uses: peter-evans/find-comment@v2
-        id: fc
+        id: findComment
+        continue-on-error: true
         with:
-          issue-number: ${{ steps.pr-number.outputs.result }}
+          issue-number: ${{ steps.findComment.outputs.comment-id }}
           comment-author: 'github-actions[bot]'
           body-includes: "<h1 id=\"link-check\">Link Check Report</h1>"
 
       - name: Create or update comment
         uses: peter-evans/create-or-update-comment@v2
         with:
-          comment-id: ${{ steps.fc.outputs.comment-id }}
+          comment-id: ${{ steps.findComment.outputs.comment-id }}
           issue-number: ${{ steps.findPr.outputs.pr }}
           body: |
             <h1 id="link-check">Link Check Report</h1>
+
             ${{ steps.check.outputs.report }}
           edit-mode: replace
