--- a/.github/workflows/download-link-check-schedule.yml
+++ b/.github/workflows/download-link-check-schedule.yml
@@ -2,6 +2,8 @@ name: Scheduled DVC Download Link Check
 
 on:
   pull_request:
+  schedule:
+    - cron: '0 0-23 * * *'
 
 concurrency:
   group: scheduled-download-link-check-${{ github.head_ref }}
@@ -13,6 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - name: Run Lychee
         uses: lycheeverse/lychee-action@v1.0.8
         with:
@@ -21,6 +24,7 @@ jobs:
             /download/
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+
       - name: Find latest open Link Check issue
         uses: actions/github-script@v6
         id: set-result
