--- a/.github/workflows/download-link-check-issue.yml
+++ b/.github/workflows/download-link-check-issue.yml
@@ -33,10 +33,9 @@ jobs:
         id: set-result
         with:
           script: |
-            console.log(context)
             const issues = await github.rest.issues.listForRepo({
-              owner: context.inputs.owner,
-              repo: context.inputs.repo,
+              owner: core.getInput('owner'),
+              repo: core.getInput('repo'),
               state: "open",
               creator: "github-actions[bot]",
               sort: "created"
