Add inputs on consumer side

--- a/.github/workflows/download-link-check-schedule.yml
+++ b/.github/workflows/download-link-check-schedule.yml
@@ -12,3 +12,6 @@ concurrency:
 jobs:
   check_links_and_make_issue:
     uses: './.github/workflows/download-link-check-issue.yml'
+    with:
+      owner: "${{ github.event.repository.owner.login }}"
+      repo: "${{ github.event.repository.name }}"
