--- a/.github/workflows/download-link-check-issue.yml
+++ b/.github/workflows/download-link-check-issue.yml
@@ -18,6 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - run: echo "${{ github.head_ref }}"
 
       - name: Run Lychee
         uses: lycheeverse/lychee-action@v1.0.8
