Add descriptions, remove test echo, use tag to ID

--- a/.github/workflows/download-link-check-schedule.yml
+++ b/.github/workflows/download-link-check-schedule.yml
@@ -12,3 +12,5 @@ concurrency:
 jobs:
   check:
     uses: './.github/workflows/download-link-check-issue.yml'
+    with:
+      title: 'DVC Download Link Checker Report'
