--- a/.github/workflows/download-link-check-issue.yml
+++ b/.github/workflows/download-link-check-issue.yml
@@ -4,21 +4,36 @@ on:
   workflow_call:
     inputs:
       owner:
+        description: The owner of repository to operate on if the event doesn't include it
         required: false
         type: string
         default: "${{ github.event.repository.owner.login }}"
       repo:
+        description: The repository to operate on if the event doesn't include it
         required: false
         type: string
         default: "${{ github.event.repository.name }}"
-
+      tag:
+        description: The tag that will be used to identify existing link-check reports to edit
+        required: false
+        type: string
+        default: link-check
+      tags:
+        description: The tags that will be assigned to issues created by this workflow
+        required: false
+        type: string
+        default: link-check
+      title:
+        description: The title of the issue created by this workflow
+        required: false
+        type: string
+        default: "Download Link Checker Report"
 jobs:
   check_links_and_make_issue:
     name: Check Download Links and Raise Issue
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - run: echo "${{ github.head_ref }}"
 
       - name: Run Lychee
         uses: lycheeverse/lychee-action@v1.0.8
@@ -35,28 +50,25 @@ jobs:
         env:
           OWNER: ${{ inputs.owner }}
           REPO: ${{ inputs.repo }}
+          TITLE: ${{ inputs.title }}
         with:
           script: |
-            const { OWNER, REPO } = process.env
+            const { OWNER, REPO, TAG } = process.env
             const options = {
               owner: OWNER,
               repo: REPO,
+              labels: TAG,
               state: "open",
               creator: "github-actions[bot]",
               sort: "created"
             }
             const issues = await github.rest.issues.listForRepo(options)
-            const latestOpenLinkCheckIssue = issues.data.find(
-              (issue)=>(
-                issue.title === "DVC Download Link Checker Report"
-              )
-            )
-            if(latestOpenLinkCheckIssue) return latestOpenLinkCheckIssue.number
+            if(issues && issues.data) return issues.data[0]
 
       - name: Create or Update Issue
         uses: peter-evans/create-issue-from-file@v4
         with:
-          title: DVC Download Link Checker Report
+          title: ${{ inputs.title }}
           content-filepath: ./lychee/out.md
           labels: website, link-checker
           issue-number: ${{ steps.set-result.outputs.result }}
