--- a/.github/workflows/download-link-check-issue.yml
+++ b/.github/workflows/download-link-check-issue.yml
@@ -42,7 +42,11 @@ jobs:
       - name: Dummy Run Lychee
         run: |
           mkdir ./lychee
-          echo "## This is a test failure for an update of link-check!" > ./lychee/out.md
+          echo "\
+          \#\# This is a test failure for an update of link-check!\n\
+          \n\
+          Nothing to see here\
+          " > ./lychee/out.md
 
       - name: Find latest open Link Check issue
         uses: actions/github-script@v6
@@ -50,7 +54,7 @@ jobs:
         env:
           OWNER: ${{ inputs.owner }}
           REPO: ${{ inputs.repo }}
-          TITLE: ${{ inputs.title }}
+          TAG: ${{ inputs.tag }}
         with:
           script: |
             const { OWNER, REPO, TAG } = process.env
